# codemode-rs

./: .gitignore  Cargo.toml  README.md
examples/: mcp_streamable_http.rs  media_mcp_streamable_http.rs
src/: client.rs  lib.rs  mcp.rs  sandbox.rs  schema.rs  tool.rs  ts_interface.rs
tests/: ts_interface.rs
