[package]
name = "codemode-rs"
description = "A secure V8 JavaScript sandbox with MCP (Model Context Protocol) tool integration"
version = "0.2.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dt665m/codemode-rs"
edition = "2024"

[dependencies]
async-trait = "0.1"
dashmap = "6.1"
derive_builder = "0.20"
rmcp = { version = "0.14", optional = true, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "reqwest",
] }
v8 = "145.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "process",
  "time",
], optional = false }

[features]
default = ["mcp"]
mcp = ["rmcp"]

[dev-dependencies]
tracing-subscriber = "0.3"
